data/all_generated_tests/raw_wast_tests/loop_MismanagementofBlockNesting_652.wast
;; 3. **Test Description**: A nested `loop` and `if` structure where the `br_if` conditionally branches to a label in an outer block but within the deepest loop.    - **Constraint Checked**: Verifies conditional branching respects nested structural boundaries.    - **Relation to Mismanagement of Block Nesting**: Mismanagement may allow the `br_if` to incorrectly resolve labels, affecting flow control.

(assert_invalid
  (module
    (func $nested-loop-if
      (i32.const 1)
      (loop (result i32)
        (if (result i32)
          (then (br_if 1 (i32.const 0)))
          (else (i32.const 1) (loop (i32.const 2) (br_if 1 (i32.const 1))))
        )
      )
    )
  )
  "type mismatch"
)